--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^1.0.0 # new
+  firebase_auth: ^1.0.0   # new
+  google_fonts: ^2.0.0
+  provider: ^5.0.0        # new
 
 
   # The following adds the Cupertino Icons font to your application.
