--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^1.0.0 # new
-  firebase_auth: ^1.0.0   # new
+  cloud_firestore:
+  firebase_core:
+  firebase_auth:
+  google_sign_in:
+  firebase_storage:
+  image_picker:
   google_fonts: ^2.0.0
-  provider: ^5.0.0        # new
+  provider:
+
 
 
   # The following adds the Cupertino Icons font to your application.
