--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,9 +54,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/screen.png
+    - assets/convenience_store.png
+    - assets/luggage.png
+    - assets/exchange.png
+    - assets/laundry.png
+    - assets/package.png
+    - assets/pharmacy.png
+    - assets/transaction.png
+    - assets/coffee.png
+    - assets/office_supplies.png
+    - assets/ect.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -69,17 +78,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Cafe24 Surround
+      fonts:
+        - asset: fonts/Cafe24Ssurround.ttf
+    - family: Vitro Pride
+      fonts:
+        - asset: fonts/VitroPride.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
