--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^0.7.4
   google_fonts: ^2.0.0
   provider: ^5.0.0        # new
+  carousel_slider: ^4.0.0-nullsafety.0
 
 
 
@@ -55,7 +56,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/screen.png
+    - assets/images/screen.png
     - assets/convenience_store.png
     - assets/luggage.png
     - assets/exchange.png
@@ -66,6 +67,10 @@ flutter:
     - assets/coffee.png
     - assets/office_supplies.png
     - assets/ect.png
+    - assets/images/slider/simple_intro.png
+    - assets/images/slider/simple_ad.png
+    - assets/images/slider/simple_sd.png
+    - assets/images/slider/simple_spectrum.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
