06/04 20:16 updated by yechan

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ flutter:
     - assets/pharmacy.png
     - assets/transaction.png
     - assets/coffee.png
-    - assets/office_supplies.png
+    - assets/office_supply.png
     - assets/ect.png
     - assets/images/slider/simple_intro.png
     - assets/images/slider/simple_ad.png
