--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,11 @@ dependencies:
   firebase_auth: ^1.0.0   # new
   google_sign_in: ^5.0.0-nullsafety
   firebase_storage: "^8.0.5"
-  image_picker: ^0.7.4
+  image_picker: ^0.8.0
   google_fonts: ^2.0.0
   provider: ^5.0.0        # new
   carousel_slider: ^4.0.0-nullsafety.0
-
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
