--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   provider: ^5.0.0        # new
   carousel_slider: ^4.0.0-nullsafety.0
   intl: ^0.17.0
+  geolocator: ^7.0.0-nullsafety.0
+  geocoding: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
