--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   random_string: ^2.2.0-nullsafety
   geolocator: ^7.0.0-nullsafety.0
   geocoding: ^2.0.0
+  comment_box: ^0.0.16
+  hexcolor: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
