--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   geocoding: ^2.0.0
   comment_box: ^0.0.16
   hexcolor: ^2.0.4
+  google_maps_flutter: ^2.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
